1.12/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: project
  name: todoapp-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todoapp
  template:
    metadata:
      labels:
        app: todoapp
    spec:
      volumes:
        - name: persistent-volume
          persistentVolumeClaim:
            claimName: todoapp-claim
      containers:
        - name: todoapp
          image: rjantp/kubernetessubmissions:ex2.6a2
          volumeMounts:
          - name: persistent-volume
            mountPath: /app/wwwroot/images
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
        - name: todobackend
          image: rjantp/kubernetessubmissions:ex2.8b2
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
