1.12/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todoapp-svc
spec:
  type: ClusterIP
  selector:
    app: todoapp
  ports:
  - port: 1234
    name: todoapp-port
    protocol: TCP
    targetPort: 3000
